Add basic macOS support from kladd

--- a/scripts/libmakepkg/executable/checksum.sh.in
+++ b/scripts/libmakepkg/executable/checksum.sh.in
@@ -24,6 +24,7 @@ LIBMAKEPKG_EXECUTABLE_CHECKSUM_SH=1
 LIBRARY=${LIBRARY:-'@libmakepkgdir@'}
 
 source "$LIBRARY/util/message.sh"
+source "$LIBRARY/util/mac.sh"
 
 executable_functions+=('executable_checksum')
 
