--- a/scripts/libmakepkg/util/meson.build
+++ b/scripts/libmakepkg/util/meson.build
@@ -5,6 +5,7 @@ sources = [
   'config.sh.in',
   'dirsize.sh.in',
   'error.sh.in',
+  'mac.sh.in',
   'message.sh.in',
   'option.sh.in',
   'parseopts.sh.in',
